Basket details, font aweesome added

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,6 +4,9 @@
 // Variables
 @import "variables";
 
+//Font awesome
+@import "@fortawesome/fontawesome-free/css/all.css";
+
 // Bootstrap
 @import "bootstrap/scss/bootstrap";
 
